[project]
name = "douyin-downloader"
version = "0.1.0"
description = "抖音视频下载器 - 支持批量下载抖音视频、图集等内容"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "jiji262", email = "" }
]
keywords = ["douyin", "downloader", "video", "tiktok"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core dependencies
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "rich>=13.7.0",

    # Async support
    "aiohttp>=3.9.0",
    "aiofiles>=23.2.1",
    "aiosqlite>=0.19.0",

    # Browser automation for cookie extraction
    "playwright>=1.40.0",

    # Logging
    "python-json-logger>=2.0.7",

    # Utilities
    "python-dateutil>=2.8.2",
    "requests-toolbelt>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.23.3",
    "black>=23.11.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apiproxy", "utils", "dy-downloader"]
include = [
    "*.py",
    "*.yml",
]

[dependency-groups]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.23.3",
    "black>=23.11.0",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
